# ChangeLog for sys-cluster/lustre
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Apr 2014; Alexey Shvetsov <alexxy@gentoo.org>
  +files/0001-LU-3319-procfs-Move-NRS-TBF-proc-handling-to-seq_fil.patch,
  +files/0002-LU-3319-procfs-update-zfs-proc-handling-to-seq_files.patch,
  +files/0003-LU-3319-procfs-move-osp-proc-handling-to-seq_files.patch,
  +files/0004-LU-3319-procfs-move-lod-proc-handling-to-seq_files.patch,
  +files/0005-LU-3319-procfs-move-mdt-mds-proc-handling-to-seq_fil.patch,
  +files/0006-LU-3319-procfs-move-mdd-ofd-proc-handling-to-seq_fil.patch,
  +files/0007-LU-4416-mm-Backport-shrinker-changes-from-upstream.patch,
  -files/0001-LU-3319-procfs-fix-symlink-handling.patch,
  -files/0002-LU-3319-procfs-Move-NRS-TBF-proc-handling-to-seq_fil.patch,
  -files/0003-LU-3319-procfs-update-zfs-proc-handling-to-seq_files.patch,
  -files/0004-LU-3319-procfs-move-mgs-proc-handling-to-seq_files.patch,
  -files/0005-LU-3319-procfs-move-osp-proc-handling-to-seq_files.patch,
  -files/0006-LU-3319-procfs-move-lod-proc-handling-to-seq_files.patch,
  -files/0007-LU-3319-procfs-move-mdt-mds-proc-handling-to-seq_fil.patch,
  -files/0008-LU-3319-procfs-move-mdd-ofd-proc-handling-to-seq_fil.patch,
  -files/0009-LU-3319-procfs-update-ldiskfs-proc-handling-to-seq_f.patch,
  -files/0010-LU-4416-mm-Backport-shrinker-changes-from-upstream.patch,
  lustre-9999.ebuild:
  Update lustre patches

  02 Apr 2014; Alexey Shvetsov <alexxy@gentoo.org>
  +files/0010-LU-4416-mm-Backport-shrinker-changes-from-upstream.patch,
  +files/lustre-readline6.3_fix.patch,
  files/0001-LU-3319-procfs-fix-symlink-handling.patch,
  files/0002-LU-3319-procfs-Move-NRS-TBF-proc-handling-to-seq_fil.patch,
  files/0003-LU-3319-procfs-update-zfs-proc-handling-to-seq_files.patch,
  files/0004-LU-3319-procfs-move-mgs-proc-handling-to-seq_files.patch,
  files/0005-LU-3319-procfs-move-osp-proc-handling-to-seq_files.patch,